--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,12 @@ border: 3px solid Black;
  }
  
  
-}
+
 				
+#displaychat{
+	margin:15px;
+	border: 3px solid Red;
+	height: 100px;
+	overflow:auto;
+}
 				
